spacing fix

--- a/assets/css/ageland.scss
+++ b/assets/css/ageland.scss
@@ -405,7 +405,7 @@ a:hover {
 }
 
 .ag_section_title .title {
-  line-height: 1.35;
+  line-height: 1;
 }
 
 .overflow-visiable {
@@ -8762,6 +8762,9 @@ Close 404 page style
   background-color: white;
   box-shadow: 0px 20px 60px 0px rgba(0, 11, 40, 0.06);
 }
+.dl_accordion_item.dl_accordion_style_01:last-child {
+  margin-bottom: 0;
+}
 
 .dl_accordion_item.dl_accordion_style_01 .dl_accordion_panel {
   padding-top: 20px;
@@ -9039,6 +9042,9 @@ Close 404 page style
   &:hover{
     border-color: #ff4089 !important;
   }
+}
+.services_section{
+  padding-top: 84px;
 }
 @media (max-width: 560px){
   .elementor-438 .elementor-element.elementor-element-f4db23d .gallery {
